2009-12-27  Raúl Mateos  <raulofpandora@gmail.com>

	* extensions/users/menu.png: New file

	* extensions/users_connected.php: Added icon and changed menu section.
	Added new godmode function that allows the user to be edited.

2009-12-24  Raúl Mateos  <raulofpandora@gmail.com>

	* images/pandora_logo.jpg: New file, used in dashboard (dashboard should
	use the .png instead this .jpg.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php: fix bug to call
	enterprise function without test if the enterprise install.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: fix bug that show SQL error message and don't
	show the actions for compound alerts.
	* include/functions_alerts.php: in function "get_alert_agent_module_actions"
	add the parameter compound for search compound actions.

2009-12-24  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/module_manager_editor_common.php,
	godmode/agentes/module_manager_editor_network.php,
	godmode/agentes/module_manager_editor_wmi.php,
	godmode/agentes/module_manager_editor_plugin.php,
	godmode/agentes/module_manager_editor_prediction.php: change the lines to
	test if the form is for policy use. And clean source code.

2009-12-24  Sancho Lerena <slerena@artica.es>

	* DEBIAN/postinst: Fixed some perms on postinstall.

	* pandora_console_install: Fixed some perms on postinstall.

	* pandora_console.spec: Removed one blank space :-))

2009-12-23  Ramon Novoa  <rnovoa@artica.es>

	* include/functions_db.php: Fixed avg. calculation in custom reports. 

2009-12-23  Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/agentes/planned_downtime.php: fixes bug in several fields of
	edit form downtime.
	Fixes: 2919938
