@@ -105,7 +105,7 @@ function dbmgr_extension_main () {
 }
 
 /* This adds a option in the operation menu */
-add_godmode_menu_option (__('DB interface'), 'PM');
+add_godmode_menu_option (__('DB interface'), 'PM','gdbman',"dbmanager/icon.png");
 
 /* This sets the function to be called when the extension is selected in the operation menu */
 add_extension_godmode_function ('dbmgr_extension_main');
